--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -25,6 +25,7 @@ $secondary-color: #55b7ff;
 $text-color: #4b5562;
 $gray: #eaeaea;
 $title-color: #2c4058;
+$white: #fff;
 
 $title-font: 'Gotham Bold', sans-serif;
 $subtitle-font: 'Gotham Medium', sans-serif;
