--- a/css/styles.css
+++ b/css/styles.css
@@ -417,6 +417,8 @@ body {
   margin: 0 auto;
   max-width: 1170px;
   width: 96%; }
+  .container--footer {
+    max-width: 770px; }
 
 header {
   position: absolute;
@@ -428,8 +430,8 @@ header {
 .hero {
   min-height: 100vh;
   background-position: center;
-  background-size: cover;
   background-repeat: no-repeat;
+  background-size: cover;
   position: relative; }
   .hero__text {
     position: absolute;
@@ -443,28 +445,26 @@ header {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
     -ms-flex-direction: column;
     flex-direction: column;
     text-transform: uppercase; }
   .hero__title {
-    color: #eaeaea;
+    color: #fff;
     font-family: "Gotham Bold", sans-serif;
     font-size: 8rem;
     font-weight: 700;
     line-height: 1.7;
-    letter-spacing: 5px;
     margin: 0; }
   .hero__subtitle {
-    letter-spacing: 6px;
-    color: #eaeaea;
+    color: #fff;
     font-family: "Gotham Book", sans-serif;
     font-size: 1.8rem;
     font-weight: 300;
@@ -475,8 +475,6 @@ header {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex; }
-  .nav__logo {
-    max-width: 100%; }
   .nav__menu {
     width: 60%;
     list-style: none;
@@ -488,12 +486,10 @@ header {
     justify-content: space-between;
     padding: 0;
     margin: 10px 0 0 85px; }
-  .nav__item {
-    display: inline-block; }
   .nav__link {
     text-decoration: none;
     text-transform: uppercase;
-    color: #eaeaea;
+    color: #fff;
     font-family: "Gotham Book", sans-serif;
     font-size: 1.4rem;
     font-weight: 400;
@@ -503,71 +499,71 @@ header {
       display: inline-block;
       width: 7px;
       height: 7px;
-      border-radius: 50%;
       border: 1px solid #eaeaea;
-      margin-right: 5px;
+      border-radius: 50%;
+      margin-right: 10px;
       -webkit-transition: all .4s ease-in;
       -o-transition: all .4s ease-in;
       transition: all .4s ease-in; }
-    .nav__link:hover:before {
-      background-color: #eaeaea; }
+    .nav__link:hover::before {
+      background-color: #fff; }
   .nav__socials {
-    width: 20%;
-    padding: 0;
-    margin: 10px 0 0 85px;
-    list-style: none;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: justify;
-    -ms-flex-pack: justify;
-    justify-content: space-between; }
+    margin-left: 40px; }
   .nav__social {
-    list-style: none;
-    text-decoration: none;
-    color: #eaeaea;
-    font-family: "Gotham Book", sans-serif;
-    font-size: 1.4rem;
-    font-weight: 400;
-    line-height: 1.7;
-    display: inline-block;
-    border: 1px solid #eaeaea;
+    width: 4rem;
+    height: 4rem;
+    border: 1px solid #fff;
     border-radius: 50%;
-    padding: 8px 15px;
+    text-decoration: none;
+    margin-left: 20px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    color: #fff;
     -webkit-transition: all .4s ease-in;
     -o-transition: all .4s ease-in;
+    transition: all .4s ease-in;
+    z-index: 100;
     transition: all .4s ease-in; }
     .nav__social:hover, .nav__social:focus, .nav__social:active {
-      -webkit-box-shadow: 0px 0px 20px #eaeaea;
-      box-shadow: 0px 0px 20px #eaeaea; }
+      -webkit-box-shadow: 0px 0px 20px #fff;
+      box-shadow: 0px 0px 20px #fff; }
 
 .scroll {
   position: absolute;
   bottom: 5%;
   right: 48%;
+  border-radius: 50%;
   -webkit-transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   -o-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
-  border: 1px solid #eaeaea;
-  border-radius: 50%;
-  padding: 6px 16px;
-  fill: #eaeaea;
   -webkit-transition: all .4s ease-in;
   -o-transition: all .4s ease-in;
   transition: all .4s ease-in; }
   .scroll:hover, .scroll:focus, .scroll:active {
-    -webkit-box-shadow: 0px 0px 20px #eaeaea;
-    box-shadow: 0px 0px 20px #eaeaea; }
+    -webkit-transform: translate(-50%, -50%) scale(1.3);
+    -ms-transform: translate(-50%, -50%) scale(1.3);
+    -o-transform: translate(-50%, -50%) scale(1.3);
+    transform: translate(-50%, -50%) scale(1.3); }
 
 .slick-dots {
   position: absolute;
-  right: 40px;
+  right: 3%;
   top: 50%;
-  -webkit-transform: translate(0, -50%);
-  -ms-transform: translate(0, -50%);
-  -o-transform: translate(0, -50%);
-  transform: translate(0, -50%);
+  -webkit-transform: translate(0, -48%);
+  -ms-transform: translate(0, -48%);
+  -o-transform: translate(0, -48%);
+  transform: translate(0, -48%);
   list-style: none;
   margin: 0;
   padding: 0; }
@@ -575,16 +571,49 @@ header {
     display: block;
     width: 10px;
     height: 10px;
+    border: 1px solid #fff;
     border-radius: 50%;
-    border: 1px solid #eaeaea;
-    background-color: transparent;
-    font-size: 0;
     padding: 0;
-    margin-bottom: 40px; }
+    margin-bottom: 40px;
+    cursor: pointer; }
     .slick-dots li:hover, .slick-dots li:active, .slick-dots li.slick-active {
-      background-color: #eaeaea; }
+      background-color: #fff; }
   .slick-dots button {
     display: none; }
+
+.caption {
+  text-align: center;
+  position: relative;
+  z-index: 2; }
+  .caption__title {
+    color: #2c4058;
+    font-family: "Gotham Medium", sans-serif;
+    font-size: 4.4rem;
+    font-weight: 400;
+    line-height: 1.7;
+    text-transform: uppercase;
+    padding: 15% 0 10%;
+    margin: 0; }
+    .caption__title--touch {
+      padding: 10% 0 5%; }
+    .caption__title:before {
+      width: 100px;
+      content: '';
+      border-top: 1px solid #2c4058;
+      position: absolute;
+      left: 50%;
+      top: 40%;
+      -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+      -o-transform: translate(-50%, -50%);
+      transform: translate(-50%, -50%); }
+    .caption__title--white {
+      color: #fff; }
+      .caption__title--white:before {
+        content: '';
+        border-color: #fff; }
+    .caption__title--bold {
+      font-family: "Gotham Bold", sans-serif; }
 
 .projects {
   display: -webkit-box;
@@ -601,27 +630,8 @@ header {
     -webkit-box-orient: inherit;
     -webkit-box-direction: inherit;
     -ms-flex-direction: inherit;
-    flex-direction: inherit; }
-  .projects__caption {
-    color: #2c4058;
-    font-family: "Gotham Bold", sans-serif;
-    font-size: 4.4rem;
-    font-weight: 700;
-    line-height: 1.7;
-    text-align: center;
-    text-transform: uppercase;
-    position: relative;
-    padding: 120px 0 100px;
-    margin: 0; }
-    .projects__caption:before {
-      content: '';
-      display: inline-block;
-      height: 2px;
-      width: 100px;
-      background-color: #2c4058;
-      position: absolute;
-      left: 47%;
-      top: 33%; }
+    flex-direction: inherit;
+    padding-bottom: 10%; }
   .projects__text {
     width: 45%; }
   .projects__title {
@@ -629,7 +639,8 @@ header {
     font-family: "Gotham Bold", sans-serif;
     font-size: 4.4rem;
     font-weight: 700;
-    line-height: 1; }
+    line-height: 1;
+    text-transform: uppercase; }
   .projects__subtitle {
     color: #2c4058;
     font-family: "Gotham Book", sans-serif;
@@ -649,22 +660,15 @@ header {
     -webkit-box-ordinal-group: 2;
     -ms-flex-order: 1;
     order: 1; }
-    .projects__centre:before {
-      content: '';
-      position: absolute;
-      display: block;
-      background-color: #55b7ff;
-      width: 100%;
-      height: 100%;
-      bottom: 10%;
-      right: 45%; }
-    .projects__centre--right:before {
-      background-color: #7e5aff;
-      left: 45%; }
   .projects__wrap {
-    padding-top: 80%;
     position: relative;
-    overflow: hidden; }
+    padding-top: 75%;
+    overflow: hidden;
+    -webkit-box-shadow: -215px -70px 0px 10px #55b7ff;
+    box-shadow: -215px -70px 0px 10px #55b7ff; }
+    .projects__wrap--right {
+      -webkit-box-shadow: 215px -70px 0px 10px #7e5aff;
+      box-shadow: 215px -70px 0px 10px #7e5aff; }
   .projects__img {
     position: absolute;
     top: 50%;
@@ -673,18 +677,373 @@ header {
     -ms-transform: translate(-50%, -50%);
     -o-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
-    width: 100%;
-    height: 100%; }
+    width: 100%; }
+  .projects__map-link {
+    display: block;
+    text-decoration: none;
+    font-style: italic;
+    color: #2c4058;
+    font-family: "Gotham Book", sans-serif;
+    font-size: 1.8rem;
+    font-weight: 400;
+    line-height: 1.7; }
+    .projects__map-link i {
+      margin-right: 10px; }
+    .projects__map-link span {
+      -webkit-transition: all .4s ease-in;
+      -o-transition: all .4s ease-in;
+      transition: all .4s ease-in; }
+      .projects__map-link span:hover, .projects__map-link span:focus, .projects__map-link span:active {
+        border-bottom: 1px solid #7e5aff; }
+  .projects--right {
+    margin: 210px 0 0; }
 
 .btn {
   display: inline-block;
   color: #4b5562;
   font-family: "Gotham Book", sans-serif;
-  font-size: 2.2rem;
+  font-size: 1.6rem;
   font-weight: 400;
   line-height: 1.6;
   text-decoration: none;
   text-transform: uppercase;
   border: 1px solid #2c4058;
   padding: 18px 42px;
-  margin-bottom: 50px; }
+  margin-bottom: 50px;
+  cursor: pointer;
+  -webkit-transition: all .4s ease-in;
+  -o-transition: all .4s ease-in;
+  transition: all .4s ease-in; }
+  .btn:hover, .btn:focus, .btn:active {
+    color: #fff;
+    font-family: "Gotham Book", sans-serif;
+    font-size: 1.6rem;
+    font-weight: 400;
+    line-height: 1.6;
+    background: rgba(85, 183, 255, 0.94);
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(85, 183, 255, 0.94)), to(rgba(126, 90, 255, 0.94)));
+    background-image: -o-linear-gradient(left, rgba(85, 183, 255, 0.94), rgba(126, 90, 255, 0.94));
+    background-image: linear-gradient(to right, rgba(85, 183, 255, 0.94), rgba(126, 90, 255, 0.94)); }
+
+.news {
+  position: relative;
+  background-size: contain;
+  background-position: bottom;
+  background-repeat: no-repeat;
+  padding-bottom: 140px; }
+  .news .slick-dots {
+    margin: 0;
+    padding: 0;
+    position: absolute;
+    bottom: 2%;
+    left: 48%;
+    -webkit-transform: translate(-15%, 115%);
+    -ms-transform: translate(-15%, 115%);
+    -o-transform: translate(-15%, 115%);
+    transform: translate(-15%, 115%); }
+    .news .slick-dots li {
+      display: inline-block;
+      margin: 20px 20px; }
+  .news .slick-arrow {
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    font-size: 0;
+    border-radius: 50%;
+    border: 1px solid rgba(255, 255, 255, 0.5);
+    padding: 0;
+    background-color: transparent;
+    position: absolute;
+    top: 50%;
+    z-index: 1;
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    -o-transform: translateY(-50%);
+    transform: translateY(-50%); }
+    .news .slick-arrow.slick-prev {
+      left: -10%;
+      cursor: pointer;
+      -webkit-transition: all .4s ease-in;
+      -o-transition: all .4s ease-in;
+      transition: all .4s ease-in; }
+      .news .slick-arrow.slick-prev:hover, .news .slick-arrow.slick-prev:focus, .news .slick-arrow.slick-prev:active {
+        -webkit-transform: translate(-10%, -50%) scale(1.3);
+        -ms-transform: translate(-10%, -50%) scale(1.3);
+        -o-transform: translate(-10%, -50%) scale(1.3);
+        transform: translate(-10%, -50%) scale(1.3); }
+      .news .slick-arrow.slick-prev:before {
+        content: '';
+        width: 8px;
+        height: 8px;
+        border-top: 1px solid #fff;
+        border-right: 1px solid #fff;
+        position: absolute;
+        top: 50%;
+        left: 54%;
+        -webkit-transform: translate(-50%, -50%) rotate(-135deg);
+        -ms-transform: translate(-50%, -50%) rotate(-135deg);
+        -o-transform: translate(-50%, -50%) rotate(-135deg);
+        transform: translate(-50%, -50%) rotate(-135deg); }
+    .news .slick-arrow.slick-next {
+      right: -10%;
+      cursor: pointer;
+      -webkit-transition: all .4s ease-in;
+      -o-transition: all .4s ease-in;
+      transition: all .4s ease-in; }
+      .news .slick-arrow.slick-next:hover, .news .slick-arrow.slick-next:focus, .news .slick-arrow.slick-next:active {
+        -webkit-transform: translate(10%, -50%) scale(1.3);
+        -ms-transform: translate(10%, -50%) scale(1.3);
+        -o-transform: translate(10%, -50%) scale(1.3);
+        transform: translate(10%, -50%) scale(1.3); }
+      .news .slick-arrow.slick-next:before {
+        content: '';
+        width: 8px;
+        height: 8px;
+        border-right: 1px solid #fff;
+        border-top: 1px solid #fff;
+        position: absolute;
+        top: 50%;
+        left: 46%;
+        -webkit-transform: translate(-50%, -50%) rotate(45deg);
+        -ms-transform: translate(-50%, -50%) rotate(45deg);
+        -o-transform: translate(-50%, -50%) rotate(45deg);
+        transform: translate(-50%, -50%) rotate(45deg); }
+
+.card {
+  display: inline-block;
+  width: 33%;
+  height: 520px;
+  max-width: 370px;
+  max-height: 96%;
+  margin-left: 33px;
+  text-decoration: none;
+  position: relative;
+  z-index: 0;
+  background-color: #fff; }
+  .card__photo {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 100%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%); }
+    .card__photo-wrap {
+      position: relative;
+      overflow: hidden;
+      padding-top: 67%; }
+  .card__hover {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    z-index: 1;
+    top: 50%;
+    opacity: 0; }
+    .card__hover:hover {
+      opacity: .9; }
+  .card__text {
+    padding: 30px 20px; }
+  .card__title {
+    color: #4b5562;
+    font-family: "Gotham Bold", sans-serif;
+    font-size: 2.2rem;
+    font-weight: 700;
+    line-height: 1.6;
+    line-height: 3.4rem;
+    text-transform: uppercase;
+    margin: 0;
+    max-height: 7.2rem;
+    overflow: hidden; }
+  .card__info {
+    line-height: 3rem;
+    max-height: 7.5rem;
+    overflow: hidden; }
+  .card__author {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    min-height: 80px;
+    cursor: pointer; }
+  .card__ava {
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    margin-right: 15px;
+    max-width: 30%; }
+  .card__sign {
+    padding: 0 15px; }
+  .card__time {
+    color: #55b7ff;
+    font-size: 1.4rem;
+    margin: 0; }
+  .card__name {
+    color: #4b5562;
+    font-family: "Gotham Book", sans-serif;
+    font-size: 1.8rem;
+    font-weight: 300;
+    line-height: 1.6;
+    margin: 0 0 -10px;
+    text-transform: uppercase; }
+
+.gallery__allphotos {
+  display: grid;
+  grid-template-columns: repeat(8, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+  grid-gap: 10px;
+  height: 440px; }
+
+.gallery__wrap {
+  overflow: hidden; }
+  .gallery__wrap--1 {
+    width: 100%;
+    grid-area: 1 / 1 / 5 / 5; }
+  .gallery__wrap--2 {
+    grid-area: 1 / 5 / 3 / 7; }
+  .gallery__wrap--3 {
+    grid-area: 1 / 7 / 3 / 9; }
+  .gallery__wrap--4 {
+    grid-area: 3 / 5 / 5 / 7; }
+  .gallery__wrap--5 {
+    grid-area: 3 / 7 / 5 / 9; }
+
+.gallery__photo {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+  object-fit: cover;
+  cursor: pointer; }
+
+.gallery__btn {
+  text-align: center;
+  margin-top: 60px;
+  padding: 18px 60px; }
+
+.map {
+  height: 700px;
+  width: 100%; }
+
+.contacts {
+  position: relative;
+  z-index: 1;
+  margin-top: 100px; }
+
+.touch__card {
+  width: 770px;
+  background-color: #fff;
+  position: absolute;
+  top: 85%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  -webkit-box-shadow: 0px 0px 15px -5px rgba(0, 0, 0, 0.8);
+  box-shadow: 0px 0px 15px -5px rgba(0, 0, 0, 0.8); }
+
+.touch__group {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  padding-bottom: 60px; }
+
+.touch__info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  padding: 0 0 0 70px; }
+  .touch__info a {
+    color: #4b5562;
+    text-decoration: none; }
+  .touch__info i {
+    color: #7e5aff;
+    margin-right: 10px;
+    padding-top: 25px; }
+
+.touch__form {
+  width: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: end;
+  -ms-flex-align: end;
+  align-items: flex-end;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  padding: 7px 70px 0 0; }
+  .touch__form input {
+    border: none;
+    border-bottom: 1px solid #fff;
+    width: 100%;
+    height: 50px;
+    outline: none; }
+    .touch__form input:hover, .touch__form input:active, .touch__form input:focus {
+      border-bottom: 1px solid #4b5562; }
+  .touch__form button {
+    background-color: #fff;
+    margin-top: 20px;
+    color: #4b5562;
+    font-family: "Gotham Book", sans-serif;
+    font-size: 1.4rem;
+    font-weight: 400;
+    line-height: 1.6;
+    -webkit-transition: all .4s ease-in;
+    -o-transition: all .4s ease-in;
+    transition: all .4s ease-in; }
+    .touch__form button:hover, .touch__form button:focus, .touch__form button:active {
+      color: #fff;
+      font-family: #eaeaea;
+      font-size: 1.4rem;
+      font-weight: 400;
+      line-height: 1.6;
+      background-image: -webkit-gradient(linear, left top, right top, from(rgba(85, 183, 255, 0.94)), to(rgba(126, 90, 255, 0.94)));
+      background-image: -o-linear-gradient(left, rgba(85, 183, 255, 0.94), rgba(126, 90, 255, 0.94));
+      background-image: linear-gradient(to right, rgba(85, 183, 255, 0.94), rgba(126, 90, 255, 0.94)); }
+
+.footer {
+  padding: 200px 0 200px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative; }
+  .footer__nav {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row; }
+  .footer__copyrights {
+    margin-top: 35px;
+    color: #fff; }
+    .footer__copyrights span:nth-child(even) {
+      margin: 0 10px; }
+      .footer__copyrights span:nth-child(even):before {
+        content: '';
+        width: 10%;
+        padding-right: 20px;
+        border-left: 1px solid; }
